Fix dungeon feature quotes not visible (Vaamat, 12032)

--- a/crawl-ref/source/webserver/game_data/static/style.css
+++ b/crawl-ref/source/webserver/game_data/static/style.css
@@ -591,6 +591,7 @@ body {
 .describe-feature-feat > .body {
     margin-top: 15px;
     font-size: 0.9em;
+    white-space: pre-wrap;
 }
 
 .describe-item {
